同步更新首页描述，添加描述同步脚本，并忽略.pyc文件

--- a/.github/workflows/build-resumes.yml
+++ b/.github/workflows/build-resumes.yml
@@ -18,6 +18,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Sync landing page descriptions
+        run: |
+          python scripts/update_descriptions.py
+          if ! git diff --quiet -- index.html index-zh.html; then
+            echo "::error::Landing page descriptions out of sync. Run 'python scripts/update_descriptions.py' locally and commit the updated HTML files."
+            git --no-pager diff -- index.html index-zh.html
+            exit 1
+          fi
+
       - name: Compile English résumé
         uses: xu-cheng/latex-action@v3
         with:
